modification scenario 1, 1bis, 3,5

--- a/scenario3_etape3_01_tiers.html
+++ b/scenario3_etape3_01_tiers.html
@@ -118,21 +118,21 @@
                           <td>
                             <div class="ui checkbox">
                               <input type="checkbox" name="1">
-                              <label class="textLabel">Pare brise seul<br>avec franchise<br>70€</label>
+                              <label class="textLabel">Pare brise seul<br>avec franchise<br>70 €</label>
                               <div class="ui label" data-content="16">16 €/an</div>
                             </div>
                           </td>
                           <td>
                             <div class="ui checkbox">
                               <input type="checkbox" name="2">
-                              <label class="textLabel">Toutes glaces<br>avec franchise<br>70€</label>
+                              <label class="textLabel">Toutes glaces<br>avec franchise<br>70 €</label>
                               <div class="ui label" data-content="21">21 €/an</div>
                             </div>
                           </td>
                           <td>
                             <div class="ui checkbox">
                               <input type="checkbox" name="3">
-                              <label>Toutes glaces<br>sans franchise<br>70€</label>
+                              <label>Toutes glaces<br>sans franchise</label>
                               <img src="images/recommandation_badge.svg" class="icon-recommandation icon recommandation"></i>
                               <div class="ui label" data-content="52">52 €/an</div>
                             </div>
@@ -284,7 +284,7 @@
                         <div class="content">
                           Réparations suite à panne<img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                           <div class="ui popup transition hidden">
-                            Cette garantie s’applique jusqu’au 100 000ème km du véhicule.
+                            Nous prenons en charge vos réparations suite à une panne mécanique et/ou électrique jusqu’au 100 000<sup>ème</sup> km de votre véhicule.
                           </div>
                         </div>
                       </h4>
