--- a/scenario3_etape3_03_tous_risques.html
+++ b/scenario3_etape3_03_tous_risques.html
@@ -191,14 +191,14 @@
                         <i class="icon-check icon"></i>
                         <div class="content">
                           Indémnisation de véhicule renforcée <img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
-                          <div class="ui popup transition hidden" >
+                          <div class="ui fluid popup transition hidden">
                             Votre véhicule vous est remboursé :
                             <ul>
-                              <li>à sa valeur d’achat  si le sinistre intervient durant les premières années   du véhicule (le nombre d’années est fonction du niveau choisi)</li>
-                              <li>et à sa valeur marché majorée si le sinistre intervient au-delà</li>
+                              <li>à sa valeur d’achat si le sinistre intervient durant les 3 premières années du véhicule</li>
+                              <li>et à sa valeur marché + 15% si le sinistre intervient au-delà</li>
                             </ul>
                             La valeur d’achat correspond au prix auquel vous avez acheté votre véhicule.<br>
-                            La valeur marché correspond au prix auquel le véhicule aurait pu être vendu juste avant le sinistre. Elle est toujours déterminée par un expert
+                            La valeur marché correspond au prix auquel le véhicule aurait pu être vendu juste avant le sinistre. Elle est toujours déterminée par un expert.
                           </div>
                         </div>
                       </h4>
