modifications et retours tous scénarios

--- a/scenario3_etape2_01_tiers.html
+++ b/scenario3_etape2_01_tiers.html
@@ -58,7 +58,7 @@
       <div class="ui page grid">
           <div class="sixteen wide center aligned column">
             <div class="ui large inverted breadcrumb">
-              <div class="section link"><a href="scenario3.html"><span>Choisissez<br>votre formule</span></a></div>
+              <div class="section link"><a href="scenario3.html#breadcrumb"><span>Choisissez<br>votre formule</span></a></div>
               <i class="right chevron icon divider"></i>
               <div class="active section"><span>Personnalisez<br>votre formule</span></div>
               <i class="right chevron icon divider"></i>
@@ -222,7 +222,7 @@
 
 
         <!-- carte garantie -->
-        <a href="scenario3_etape2_02_tiers_etendu.html#garanties">
+        <a href="scenario3_etape2_02_tiers_etendu.html#breadcrumb">
           <div class="ui fluid card">
 
           <div class="header centerTitle"><h3>TIERS<br>ÉTENDU</h3>
@@ -296,7 +296,7 @@
 
 
         <!-- carte garantie -->
-        <a href="scenario3_etape2_03_tous_risques.html#garanties">
+        <a href="scenario3_etape2_03_tous_risques.html#breadcrumb">
         <div class="ui fluid card">
 
           <div class="header centerTitle"><h3>TOUS<br>RISQUES</h3>
@@ -375,7 +375,7 @@
       <!-- CTA -->
 
       <div id="cta" class="sixteen wide center aligned column">
-        <a href="scenario3_etape3_01_tiers.html#garanties">
+        <a href="scenario3_etape3_01_tiers.html#breadcrumb">
         <button class="big ui green button cta">
           VALIDER ET CHOISIR MES GARANTIES COMPLÉMENTAIRES  <i class="chevron right icon"></i>
         </button>
