--- a/scenario3_etape3_03_tous_risques.html
+++ b/scenario3_etape3_03_tous_risques.html
@@ -62,9 +62,9 @@
       <div class="ui page grid">
           <div class="sixteen wide center aligned column">
             <div class="ui large inverted breadcrumb">
-              <div class="section link"><a href="scenario3.html"><span>Choisissez<br>votre formule</span></a></div>
+              <div class="section link"><a href="scenario3.html#breadcrumb"><span>Choisissez<br>votre formule</span></a></div>
               <i class="right chevron icon divider"></i>
-              <div class="section link"><a href="scenario3_etape2_03_tous_risques.html#garanties"><span>Personnalisez<br>votre formule</span></a></div>
+              <div class="section link"><a href="scenario3_etape2_03_tous_risques.html#breadcrumb"><span>Personnalisez<br>votre formule</span></a></div>
               <i class="right chevron icon divider"></i>
               <div class="active section"><span>Choississez vos<br>garanties complémentaires</span></div>
             </div>
@@ -82,12 +82,13 @@
       <div class="one wide column">
 
         <!-- carte garantie -->
-
+        <a href="scenario3_etape2_02_tiers_etendu.html#breadcrumb">
           <div class="ui fluid card">
             <div class="center aligned header"><h3>TIERS</h3>
+            </div>
+            <div class="content activeArea"></div>
           </div>
-        </div>
-
+        </a>
         <!-- fin de carte -->
       </div>
 
@@ -95,12 +96,13 @@
 
       <div class="one wide column">
         <!-- carte garantie -->
-
-          <div class="ui fluid card">
-            <div class="header centerTitle"><h3>TIERS<br>ÉTENDU</h3>
+          <a href="scenario3_etape2_02_tiers_etendu.html#breadcrumb">
+            <div class="ui fluid card">
+              <div class="header centerTitle"><h3>TIERS<br>ÉTENDU</h3>
+              </div>
+              <div class="content activeArea"></div>
             </div>
-          </div>
-
+          </a>
         <!-- fin de carte -->
       </div>
 
@@ -190,7 +192,7 @@
                       <h4 class="ui image header">
                         <i class="icon-check icon"></i>
                         <div class="content">
-                          Indémnisation de véhicule renforcée <img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
+                          Indémnisation du véhicule renforcée <img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                           <div class="ui fluid popup transition hidden">
                             Votre véhicule vous est remboursé :
                             <ul>
