--- a/scenario5.html
+++ b/scenario5.html
@@ -224,7 +224,8 @@
             </tr>
             <tr>
               <td>
-                <h4>Incendie, Vol
+                <h4>Incendie, Vol<br>
+                  <span>Franchise 300€</span>
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     Nous vous indemnisons en cas de vol ou d’incendie de votre véhicule. En cas de vol, si votre véhicule est retrouvé, nous prenons en charge les réparations des dommages subis.
@@ -239,7 +240,8 @@
             </tr>
             <tr>
               <td>
-                <h4>Évènements climatiques
+                <h4>Évènements climatiques<br>
+                  <span>Franchise 300€</span>
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     Nous vous indemnisons pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
@@ -299,7 +301,8 @@
             </tr>
             <tr>
               <td>
-                <h4>Bris de pare-brise
+                <h4>Bris de pare-brise<br>
+                <span>Franchise 70€</span>
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     Nous prenons en charge les frais de réparation ou de remplacement de votre pare-brise.
@@ -314,7 +317,8 @@
             </tr>
             <tr>
               <td>
-                <h4>Dommages tous accidents
+                <h4>Dommages tous accidents<br>
+                  <span>Franchise 300€</span>
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     Nous garantissons votre véhicule contre les dommages résultant de toute collision, choc, acte de vandalisme, ou sortie de route que vous soyez responsable ou non.
@@ -440,7 +444,8 @@
                 <span class="active"></span>
                 <div class="level"><span>INITIAL</span></div>
               </th>
-              <th>
+              <th class="recommandation">
+                <img src="images/recommandation_badge.svg" class="icon-recommandation icon offerBadge"></i>
                 <span class="active"></span>
                 <div class="level"><span>ÉQUILIBRE</span></div>
               </th>
@@ -551,19 +556,6 @@
   </div>
 </div>
 
-
-<!-- FOOTER -->
-<div id="footer" class="ui vertical center aligned segment">
-
-  <h3>VOTRE TARIF ASSURANCE AUTO  <span>323 € /an<span></h3>
-  <div class="ui section inverted divider"></div>
-  <button class="big ui green button cta">
-    Souscrire  <i class="chevron right icon"></i>
-  </button>
-
-
-</div>
-<!-- FIN FOOTER -->
 <!-- AVANTAGES -->
 <div id="avantages" class="ui vertical segment passedFooter">
 
@@ -676,6 +668,19 @@
 
 </div>
 <!-- FIN AVANTAGES -->
+<!-- FOOTER -->
+<div id="footer" class="ui vertical center aligned segment">
+
+  <h3>VOTRE TARIF ASSURANCE AUTO  <span>323 € /an<span></h3>
+  <div class="ui section inverted divider"></div>
+  <button class="big ui green button cta">
+    Souscrire  <i class="chevron right icon"></i>
+  </button>
+
+
+</div>
+<!-- FIN FOOTER -->
+
 
 
 
